<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE project [
		<!ELEMENT project (modelVersion|parent|groupId|artifactId|version|name|description|url|licenses|developers|scm|properties|dependencies|build)*>
		<!ATTLIST project
				xmlns CDATA #REQUIRED
				xmlns:xsi CDATA #REQUIRED
				xsi:schemaLocation CDATA #REQUIRED>
		<!ELEMENT modelVersion (#PCDATA)>
		<!ELEMENT parent (groupId|artifactId|version|relativePath)*>
		<!ELEMENT groupId (#PCDATA)>
		<!ELEMENT artifactId (#PCDATA)>
		<!ELEMENT version (#PCDATA)>
		<!ELEMENT relativePath (#PCDATA)>
		<!ELEMENT name (#PCDATA)>
		<!ELEMENT description (#PCDATA)>
		<!ELEMENT url (#PCDATA)>
		<!ELEMENT licenses (license)*>
		<!ELEMENT license (#PCDATA)>
		<!ELEMENT developers (developer)*>
		<!ELEMENT developer (#PCDATA)>
		<!ELEMENT scm (connection|developerConnection|tag|url)*>
		<!ELEMENT connection (#PCDATA)>
		<!ELEMENT developerConnection (#PCDATA)>
		<!ELEMENT tag (#PCDATA)>
		<!ELEMENT properties (java.version)*>
		<!ELEMENT java.version (#PCDATA)>
		<!ELEMENT dependencies (dependency)*>
		<!ELEMENT dependency (groupId|artifactId|scope)*>
		<!ELEMENT scope (#PCDATA)>
		<!ELEMENT build (plugins)*>
		<!ELEMENT plugins (plugin)*>
		<!ELEMENT plugin (groupId|artifactId)*>
		]>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.fst.il.m2</groupId>
	<artifactId>projet</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Projet</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
			<version>3.3.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
